# vip

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c  example_cpp.cpp
include/: libsm.h
jemalloc/include/jemalloc/internal/: arena_inlines_b.h  cache_bin.h  jemalloc_internal_inlines_c.h  tcache_inlines.h
jemalloc/src/: jemalloc.c
kernel/vip-linux-5.0/: config-qemu-otwm
kernel/vip-linux-5.0/arch/x86/entry/syscalls/: syscall_64.tbl
kernel/vip-linux-5.0/arch/x86/include/asm/: elf.h
kernel/vip-linux-5.0/arch/x86/um/asm/: elf.h
kernel/vip-linux-5.0/fs/: binfmt_elf.c  exec.c
kernel/vip-linux-5.0/include/linux/: libsm-kern.h  mm.h  otwm.h
kernel/vip-linux-5.0/init/: Kconfig
kernel/vip-linux-5.0/kernel/: Makefile  fork.c  libsm-kern.c  otwm-layout.c
kernel/vip-linux-5.0/mm/: mmap.c  mprotect.c
lib/: CMakeLists.txt  libsm.c
llvm-project/clang/lib/CodeGen/: CGClass.cpp  CodeGenModule.cpp
llvm-project/compiler-rt/lib/: CMakeLists.txt
llvm-project/compiler-rt/lib/otwm/: CMakeLists.txt  otwm.c
llvm-project/llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm-project/llvm/include/llvm/CodeGen/: Passes.h
llvm-project/llvm/include/llvm/Transforms/: Instrumentation.h
llvm-project/llvm/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  DVI.cpp  SafeStack.cpp  TargetPassConfig.cpp
llvm-project/llvm/lib/IR/: AsmWriter.cpp  Instructions.cpp
llvm-project/llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp  WholeProgramDevirt.cpp
llvm-project/llvm/lib/Transforms/InstCombine/: InstCombinePHI.cpp
llvm-project/llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  Instrumentation.cpp  OTWMAnnotate.cpp
llvm-project/llvm/tools/gold/: gold-plugin.cpp
ptmalloc/ptmalloc3/: Makefile  log  malloc.c  ptmalloc3.c
utils/: .bashrc  imprinter.py
